--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
     </div>
 
+    <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
