--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
 
     <div class="botones">
-        <div class="flex-botones">
-            <button class="estilo-boton"><a href="#">Nuevo Juego</a></button>
-            <Button class="estilo-boton"><a href="#">Pedir carta</a></Button>
-            <button class="estilo-boton"><a href="#">Detener</a></button>
+        <div class="flex-botones" id="botones">
+            <button class="estilo-boton" id="btnNuevo"><a href="#">Nuevo Juego</a></button>
+            <Button class="estilo-boton" id="btnPedir"><a href="#">Pedir carta</a></Button>
+            <button class="estilo-boton" id="btnDetener"><a href="#">Detener</a></button>
         </div>
     </div><!--row-->
 
@@ -24,7 +24,7 @@
         <div class="container-flex">
             <h2>Jugador 1 - <small>0</small></h2>
             <div id="jugador-cartas">
-                <img src="assets/cartas/10D.png" class="carta">
+                <!-- <img src="assets/cartas/10D.png" class="carta"> -->
             </div>
         </div>
     </div>
